--- a/src/App/Api/Dockerfile
+++ b/src/App/Api/Dockerfile
@@ -1,20 +1,30 @@
 #See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+USER app
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+EXPOSE 8080
+EXPOSE 8081
 
-FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["App/Api/Api.csproj", "App/Api/"]
-RUN dotnet restore "Api/Api.csproj"
+COPY ["Directory.Packages.props", "."]
+COPY ["src/App/Api/Api.csproj", "src/App/Api/"]
+COPY ["src/App/Presentation/Presentation.csproj", "src/App/Presentation/"]
+COPY ["src/App/Infrastructure/Infrastructure.csproj", "src/App/Infrastructure/"]
+COPY ["src/App/Application/Application.csproj", "src/App/Application/"]
+COPY ["src/Common/Contracts/Contracts.csproj", "src/Common/Contracts/"]
+COPY ["src/App/Domain/Domain.csproj", "src/App/Domain/"]
+COPY ["src/App/Persistence/Persistence.csproj", "src/App/Persistence/"]
+RUN dotnet restore "./src/App/Api/./Api.csproj"
 COPY . .
-WORKDIR "/src/Api"
-RUN dotnet build "Api.csproj" -c Release -o /app/build
+WORKDIR "/src/src/App/Api"
+RUN dotnet build "./Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Api.csproj" -c Release -o /app/publish /p:UseAppHost=false
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "./Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
