--- a/src/App/Api/appsettings.json
+++ b/src/App/Api/appsettings.json
@@ -23,12 +23,12 @@
     "Enrich": [ "FromLogContext", "FromMachineName", "WithThreadId" ]
   },
   "AllowedHosts": "*",
-  //"ConnectionStrings": {
-  //  "ConnectionString": "Server=mssql-instance; Database=NewTestDatabase; User=sa; Password:sa123; Trusted_Connection=True;"
-  //},
-  //"MessageBroker": {
-  //  "Host": "amqp://rabbitmq-instanc:5627",
-  //  "Username": "guest",
-  //  "Password": "guest"
-  //}
+  "ConnectionStrings": {
+    "ConnectionString": "Server=mssql-instance; Database=NewTestDatabase; User=sa; Password:sa123; Trusted_Connection=True;"
+  },
+  "MessageBroker": {
+    "Host": "amqp://rabbitmq-instanc:5627",
+    "Username": "guest",
+    "Password": "guest"
+  }
 }
