--- a/src/Report/Report.Api/Dockerfile
+++ b/src/Report/Report.Api/Dockerfile
@@ -1,20 +1,30 @@
 #See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+USER app
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+EXPOSE 8080
+EXPOSE 8081
 
-FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Report/Report.Api/Report.Api.csproj", "Report/Report.Api/"]
-RUN dotnet restore "Report/Report.Api/Report.Api.csproj"
+COPY ["Directory.Packages.props", "."]
+COPY ["src/Report/Report.Api/Report.Api.csproj", "src/Report/Report.Api/"]
+COPY ["src/Report/Presentation/Presentation.csproj", "src/Report/Presentation/"]
+COPY ["src/Report/Infrastructure/Infrastructure.csproj", "src/Report/Infrastructure/"]
+COPY ["src/Report/Application/Application.csproj", "src/Report/Application/"]
+COPY ["src/Common/Contracts/Contracts.csproj", "src/Common/Contracts/"]
+COPY ["src/Report/Domain/Domain.csproj", "src/Report/Domain/"]
+COPY ["src/Report/Persistence/Persistence.csproj", "src/Report/Persistence/"]
+RUN dotnet restore "./src/Report/Report.Api/./Report.Api.csproj"
 COPY . .
-WORKDIR "/src/Report/Report.Api"
-RUN dotnet build "Report.Api.csproj" -c Release -o /app/build
+WORKDIR "/src/src/Report/Report.Api"
+RUN dotnet build "./Report.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Report.Api.csproj" -c Release -o /app/publish /p:UseAppHost=false
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "./Report.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
