--- a/src/Report/Domain/Domain.csproj
+++ b/src/Report/Domain/Domain.csproj
@@ -6,6 +6,7 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 </Project>
