--- a/src/Report/Report.Api/appsettings.Development.json
+++ b/src/Report/Report.Api/appsettings.Development.json
@@ -24,11 +24,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectionString": "Data Source=mssql-database;Initial Catalog=NewTestDatabas;user id=sa;password=sa123_ secret_@#TYuiop;MultipleActiveResultSets=True;TrustServerCertificate=True;"
-    //"ConnectionString": "Server=mssql-database,1433;Database=NewTestDatabas;user id=sa;password=sa123_ secret_@#TYuiop;TrustServerCertificate=True;"
+    "ConnectionString": "Data Source=localhost;Initial Catalog=NewTestDatabas;User Id=sa;password=sa123_secret_@#TYuiop;MultipleActiveResultSets=True;TrustServerCertificate=True;"
   },
   "MessageBroker": {
-    "Host": "amqp://rabbitmq-instanc:5671",
+    "Host": "localhost",
     "Username": "guest",
     "Password": "guest"
   }
