--- a/src/App/Api/appsettings.Development.json
+++ b/src/App/Api/appsettings.Development.json
@@ -27,6 +27,7 @@
     "ConnectionString": "Data Source=localhost;Initial Catalog=NewTestDatabas;User Id=sa;password=sa123_secret_@#TYuiop;MultipleActiveResultSets=True;TrustServerCertificate=True;"
   },
   "MessageBroker": {
+    //"Host": "amqp://rabbitmq-instanc:15672",
     "Host": "localhost",
     "Username": "guest",
     "Password": "guest"
