--- a/src/Common/TenantServices/TenantServices.csproj
+++ b/src/Common/TenantServices/TenantServices.csproj
@@ -8,6 +8,7 @@
 		<UserSecretsId>3d7a2c1f-dbe1-42bb-96ec-eea9286c75cb</UserSecretsId>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 		<DockerfileContext>..\..\..</DockerfileContext>
+		<DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
 	</PropertyGroup>
 
 	<ItemGroup>
