--- a/launchSettings.json
+++ b/launchSettings.json
@@ -4,7 +4,9 @@
       "commandName": "DockerCompose",
       "commandVersion": "1.0",
       "serviceActions": {
-        "api": "StartDebugging"
+        "api": "StartDebugging",
+        "tenantservices": "StartDebugging",
+        "report.api": "StartDebugging"
       }
     }
   }
