--- a/src/Report/Report.Api/Report.Api.csproj
+++ b/src/Report/Report.Api/Report.Api.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>820fac78-c3b0-4350-9cf5-92b08cab37b7</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
 	<ItemGroup>
